--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,52 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* Center the content of heading elements */
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+  color: white;
+}
+
+.pic {
+  display: flex;
+  justify-content: center;
+  margin-left: 50%; /* Adjust the left margin as needed */
+  margin-right: 50%; /* Adjust the right margin as needed */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(62, 62, 68, 1) 42%);
+}
+
+.card-container {
+  width: 50%; /* Adjust the width as needed */
+  max-width: 500px; /* Reduced the max-width */
+}
+
+.card {
+  color: white;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(62, 62, 68, 1) 42%);
+  border-radius: 8px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 1.4); /* Increased the shadow and made it darker */
+  margin-bottom: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center the content horizontally */
+  text-align: center; /* Center the text */
+}
+
+.section-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.card-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
